--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/partytown": "^2.1.4",
+    "@astrojs/sitemap": "^3.4.1",
+    "@astrojs/tailwind": "^6.0.2",
     "astro": "^5.10.2",
     "graphql": "^16.11.0",
-    "graphql-request": "^7.2.0"
+    "graphql-request": "^7.2.0",
+    "web-vitals": "^3.5.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
