Fix: Add domain redirect configuration to resolve ERR_FAILED navigation
- Added Netlify redirect rule to redirect non-www to www domain
- This should resolve navigation failures where links try to access disendarkenment.com instead of www.disendarkenment.com
- Maintains SPA fallback for client-side routing

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,14 @@
   publish = "dist"
   command = "npm install && npm run build"
 
+# Redirect non-www to www
+[[redirects]]
+  from = "https://disendarkenment.com/*"
+  to = "https://www.disendarkenment.com/:splat"
+  status = 301
+  force = true
+
+# SPA fallback for client-side routing
 [[redirects]]
   from = "/*"
   to = "/index.html"
