--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/partytown": "^2.1.4",
     "@astrojs/sitemap": "^3.4.1",
     "@astrojs/tailwind": "^6.0.2",
+    "@tailwindcss/typography": "^0.5.16",
     "astro": "^5.10.2",
     "graphql": "^16.11.0",
     "graphql-request": "^7.2.0",
