feat: update content and configuration

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Disendarkenment - Licensed Psychedelic Journey Facilitation",
   "short_name": "Disendarkenment",
-  "description": "Professional psychedelic journey facilitation services in Oregon and Colorado. Licensed psilocybin therapy with preparation, facilitation, integration, and beyond.",
+  "description": "Professional psychedelic journey facilitation services in Oregon, Colorado, and elsewhere. Licensed psilocybin facilitation with preparation, integration, and beyond.",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#1e1b4b",
